Sonar fix for send and reply